syntax = "proto3";

package proto;

service SomethingService {
  rpc echo (EchoRequest) returns (EchoResponse);
  rpc verifyAdmin (EchoRequest) returns (EchoResponse);
  rpc readSomething (EchoRequest) returns (EchoResponse);
  rpc createSomething (EchoRequest) returns (EchoResponse);
  rpc updateSomething (EchoRequest) returns (EchoResponse);
}

message EchoRequest {string message = 1;}
message EchoResponse {string message = 1;}
